--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "vite": "^7.2.6"
   },
   "dependencies": {
-    "eslint": "^9.39.2"
+    "@tailwindcss/vite": "^4.1.18",
+    "eslint": "^9.39.2",
+    "tailwindcss": "^4.1.18"
   }
 }
